# p2p-communicator

./: .gitignore  .gitkeep  CMakeLists.txt  README.md  oop_2019_komunikator_p2p.ts  qml.qrc
include/: Connection.hpp  Controller.hpp  Conversation.hpp  Database.hpp  File.hpp  MainWindow.hpp  Message.hpp  Server.hpp
qml/: ReceivedMessage.qml  main.qml
src/: Connection.cpp  Controller.cpp  Conversation.cpp  Database.cpp  File.cpp  MainWindow.cpp  Message.cpp  Server.cpp  main.cpp
test/: CMakeLists.txt
test/include/: TestIncludes.h
test/src/: ConnectionTest.cpp  ControllerTest.cpp  Conversation.cpp  DummyTest.cpp  setup.cpp  utils.cpp
uml/: diagram.puml
